--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -27,8 +27,7 @@
 }
 
 .contact__option-icon {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+    font-size: .7rem;
 }
 
 .contact__option a {
