--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -36,7 +36,7 @@ footer a {
     background: var(--color-bg);
     color: var(--color-white);
     padding: 0.8rem;
-    border-radius: 0.7rem;
+    border-radius: 4rem;
     display: flex;
     border: 1px solid transparent;
 }
@@ -48,8 +48,16 @@ footer a {
 }
 
 .footer__copyright {
-    margin-bottom: 4rem;
+    /* margin-bottom: 4rem; */
     color: var(--color-bg);
+    background: rgba(253, 253, 253, 0.2);
+    padding: 5px 0;
+    overflow: hidden;
+    padding: 20px 0 20px 0;
+    width: 50%;
+    margin: 0 auto;
+    border: 3px double #fff;
+    box-shadow: 0px 0px 9px rgba(253, 252, 252, 7);
 }
   
 @media screen and (max-width: 600px){
