--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,9 @@
 header {
   height: 100%;
-  padding-top: 7rem;
+  /* padding-top: 7rem; */
   overflow: hidden;
 }
+
 
 .header__container {
   text-align: center;
@@ -92,3 +93,9 @@ img.main-logo {
     opacity: 2;
   }
 }
+
+
+div#tsparticles {
+  height: 100%;
+}
+
