--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -18,6 +18,7 @@
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
+   
 }
 
 .contact__option:hover {
@@ -77,13 +78,29 @@ textarea {
     }
 }
 
+
+
+
 .css-di4d8m-MuiPaper-root-MuiCard-root {
     background-color: #fff;
     color: rgba(0, 0, 0, 0.87);
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    border-radius: 4px;
+    border-radius: 4px 4px 0 0 !important;
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     overflow: hidden;
     max-width: 100% !important;
+}
+
+.css-1mcnwpj-MuiList-root {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 100%;
+    max-width: 100% !important;
+    background-color: #fff;
+    border-radius: 0 0 4px 4px;
 }
