--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -49,3 +49,19 @@
   padding: 0 0 2px 0;
   width: 100% !important;
 }
+
+.css-10hburv-MuiTypography-root {
+  margin: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  display: block;
+  color: black !important;
+}
+
+
+.MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-4.css-gj1fbr-MuiGrid-root {
+  margin: 0 0 5px 0;
+}
