--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -81,7 +81,7 @@ textarea {
 
 
 
-/* .css-di4d8m-MuiPaper-root-MuiCard-root {
+.css-di4d8m-MuiPaper-root-MuiCard-root {
     background-color: #fff;
     color: rgba(0, 0, 0, 0.87);
     -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -90,11 +90,11 @@ textarea {
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     overflow: hidden;
     max-width: 100% !important;
-} */
-
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiCard-root.css-daej4n {
-    max-width: 100% !important;
 }
+
+
+
+
 .css-1mcnwpj-MuiList-root {
     list-style: none;
     margin: 0;
@@ -106,8 +106,4 @@ textarea {
     max-width: 100% !important;
     background-color: #fff;
     border-radius: 0 0 4px 4px;
-}
-
-span.MuiTypography-root.MuiTypography-body1.MuiListItemText-primary.css-yb0lig {
-    color: black !important;
 }
